doc/pyre: back to titles with arbitrary TeX, no wthat the table of frames is generated more robustly

--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -433,21 +433,21 @@
 \subsection{shells}
 \begin{frame}
 %
-  \frametitle{The default shell}
+  \frametitle{The \component{script} shell}
 %
 \end{frame}
 
 % --------------------------------------
 \begin{frame}
 %
-  \frametitle{The interactive shell}
+  \frametitle{The \component{interactive} shell}
 %
 \end{frame}
 
 % --------------------------------------
 \begin{frame}
 %
-  \frametitle{The web shell}
+  \frametitle{The \component{web} shell}
 %
 \end{frame}
 
@@ -456,7 +456,7 @@
 %
   \label{frame:applications-plexus-pedigree}
 %
-  \frametitle{The plexus structure}
+  \frametitle{The \component{Plexus} structure}
 %
   \vskip -3ex
   \only<1>{
