--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -680,7 +680,7 @@
 %
   \label{frame:srtm-pfg}
 %
-  \frametitle{Configuration --- the preferred formal}
+  \frametitle{Configuration --- the \identifier{pfg} format}
 %
   \begin{itemize}
 %
@@ -720,7 +720,7 @@
 %
   \label{frame:srtm-pml}
 %
-  \frametitle{Configuration --- an XML dialect}
+  \frametitle{Configuration --- the \identifier{pml} format}
 %
   \begin{itemize}
 %
@@ -762,7 +762,7 @@
 %
   \label{frame:srtm-cfg}
 %
-  \frametitle{Configuration --- windows inspired format}
+  \frametitle{Configuration --- the \identifier{cfg} format}
 %
   \begin{itemize}
 %
