--- a/doc/pyre/pyre.tex
+++ b/doc/pyre/pyre.tex
@@ -18,7 +18,7 @@
 % the document
 \title[pyre 1.0 -- january 2017]{pyre 1.0}
 \author[\url{michael.aivazis@para-sim.com}]{Michael A.~G.~A\"iv\'azis}
-\institute{\small parasim \\ \url{michael.aivazis@para-sim.com}}
+\institute{\url{michael.aivazis@para-sim.com} \\ \small parasim }
 \date{January 2017}
 
 \begin{document}
