doc/pyre: added a reference to the line with the conditional assignment syntax

--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -252,10 +252,12 @@
   \item what we need is a way to express the following: if \trait{stitch.dem} is an instance of
     \component{isce.topography.dem.srtm}, then set \trait{resolution} to 1
 %
-  \item there is special syntax for this use case
+  \item there is special syntax for this use case; see
+    \lstlineref{applications-conditional-syntax} below
+%
     \pfg{firstnumber=7, linerange={7-18}}{listings/stitch-conditional.pfg}
 %
-  \item now the setting applies only when \trati{dem} is bound to an \component{SRTM} instance
+  \item now the setting applies only when \trait{dem} is bound to an \component{SRTM} instance
 %
   \end{itemize}
 %
